@@ -47,6 +47,24 @@ import parse
 namespace BOOT
 
 --%
+
+addClose(line,ch) ==
+  FETCHCHAR(line,maxIndex line) = char ";" =>
+    ch = char ";" => line
+    line.(maxIndex line) := ch
+    SUFFIX(char ";",line)
+  SUFFIX(ch,line)
+
+escaped?(s,n) ==
+  n > 0 and FETCHCHAR(s,n-1) = char "__"
+
+infixToken? s ==
+  STRING2ID_-N(s,1) in '(_then _else)
+
+atEndOfUnit? x ==
+  not string? x
+  
+--%
 macro compulsorySyntax s ==
   s or SPAD__SYNTAX__ERROR()
 
